tests/test66.rael.exp
Error [1:5]: Unrecognized token
| log rael
|     ^
